fixed calendar header: when pick 2nd date >> jumps to add guests. fixed order form: when enter details page - shows the guests from filter on form

--- a/frontend/src/assets/styles/cmps/_CalendarPicker.scss
+++ b/frontend/src/assets/styles/cmps/_CalendarPicker.scss
@@ -1,3 +1,10 @@
-.react-day-picker__day--selected {
-    background-color: #ff0000; /* Replace with your desired background color */
+.custom-day-picker {
+  .DayPicker-Day--selected:not(.DayPicker-Day--outside) {
+    background-color: black;
+    color: white;
   }
+  
+  .DayPicker-Day--selected:not(.DayPicker-Day--outside) + .DayPicker-Day:not(.DayPicker-Day--selected):not(.DayPicker-Day--disabled) {
+    background-color: grey;
+  }
+}
